@@ -6,6 +6,7 @@ Changes for 1.9
 
 Changes for 1.8.3
 
+ - [ZBX-2385] added macro {TRIGGER.PROBLEM.EVENTS.PROBLEM.UNACK} (Vedmak)
  - [ZBX-2040] annoying "double check" popups removed from copy to & mass update actions of items and triggers (Maxim Andruhovich / AM)
  - [ZBX-2482] fixes in chart graphs avg calc (Aly)
  - [ZBX-1477] fixed moving screen elements with spans (Vedmak)
